[package]
name = "rudzio-fixtures"
version = "0.1.0"
edition = { workspace = true }
publish = false
description = "Scenario fixtures for the rudzio framework. Each binary in `src/bin/` is a standalone `#[rudzio::main]` program exercising one aspect of the framework; `tests/integration.rs` spawns them and asserts on their output."

# Cargo would otherwise treat every `tests/*.rs` file as a separate test
# binary, defeating the point of a single `#[rudzio::main]` per crate.
autotests = false

# `cargo rudzio test` generates an aggregator crate that `#[path]`-includes
# every member's `tests/*.rs`. `tests/compile.rs` is a trybuild harness with
# manifest-dir-relative paths that only resolve when compiled as part of this
# fixtures crate — exclude it from the aggregator so stock `cargo test -p
# rudzio-fixtures` still runs it while `cargo rudzio test` skips it.
[package.metadata.rudzio]
exclude = ["tests/compile.rs"]

[dependencies]
anyhow = "=1.0.102"
rudzio = { workspace = true, features = [
  "runtime-tokio-multi-thread",
  "runtime-tokio-current-thread",
  "runtime-tokio-local",
  "runtime-compio",
  "runtime-embassy",
  "runtime-futures",
  "runtime-async-std",
  "runtime-smol",
  "common",
] }
tokio = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
trybuild = { workspace = true }

# Integration tests drive child processes and deliver Unix signals to them
# to exercise the runner's SIGINT/SIGTERM handling.
[target.'cfg(unix)'.dev-dependencies]
libc = "=0.2.186"

# Rudzio tests itself: one `#[rudzio::main]` collects every `#[rudzio::test]`
# across the whole test binary (both integration scenarios and trybuild
# compile checks), so there is a single test entry point per crate.
[[test]]
name = "main"
path = "tests/main.rs"
harness = false

# Each fixture bin is a `#[rudzio::main]` binary, not a libtest target;
# `test = false` suppresses cargo's default "unittests src/bin/<name>.rs"
# pass that would otherwise compile and run each bin once under libtest
# with 0 #[test] fns, cluttering `cargo test` output with empty result
# lines. Paths are implicit (`src/bin/<name>.rs`).
[[bin]]
name = "bg_thread_panic_in_setup_tokio_mt"
test = false

[[bin]]
name = "cancel_token_propagation_tokio_mt"
test = false

[[bin]]
name = "context_creation_failure_tokio_mt"
test = false

[[bin]]
name = "cross_runtime_parallel"
test = false

[[bin]]
name = "custom_context_tokio_mt"
test = false

[[bin]]
name = "failing_tokio_mt"
test = false

[[bin]]
name = "gradual_cancel_tokio_mt"
test = false

[[bin]]
name = "group_dedup_tokio_mt"
test = false

[[bin]]
name = "ignored_tokio_mt"
test = false

[[bin]]
name = "multi_file_suite"
test = false

[[bin]]
name = "hung_run_grace_tokio_mt"
test = false

[[bin]]
name = "multi_panic_ordering_tokio_mt"
test = false

[[bin]]
name = "multi_runtime"
test = false

[[bin]]
name = "mutable_test_context"
test = false

[[bin]]
name = "panic_in_suite_setup_tokio_mt"
test = false

[[bin]]
name = "panic_in_suite_teardown_tokio_mt"
test = false

[[bin]]
name = "panic_in_test_setup_tokio_mt"
test = false

[[bin]]
name = "panic_in_test_teardown_tokio_mt"
test = false

[[bin]]
name = "panics_tokio_mt"
test = false

[[bin]]
name = "parallel_tokio_mt"
test = false

[[bin]]
name = "passing_compio"
test = false

[[bin]]
name = "passing_embassy"
test = false

[[bin]]
name = "passing_futures"
test = false

[[bin]]
name = "passing_tokio_ct"
test = false

[[bin]]
name = "passing_tokio_local"
test = false

[[bin]]
name = "passing_tokio_mt"
test = false

[[bin]]
name = "per_test_attr_body_timeout_tokio_mt"
test = false

[[bin]]
name = "per_test_attr_setup_timeout_tokio_mt"
test = false

[[bin]]
name = "per_test_attr_teardown_timeout_tokio_mt"
test = false

[[bin]]
name = "per_test_timeout_tokio_mt"
test = false

[[bin]]
name = "plain_test_attr_tokio_mt"
test = false

[[bin]]
name = "repro_drop_barrier"
test = false

[[bin]]
name = "run_timeout_tokio_mt"
test = false

[[bin]]
name = "setup_failure_tokio_mt"
test = false

[[bin]]
name = "suite_setup_timeout_tokio_mt"
test = false

[[bin]]
name = "suite_teardown_timeout_tokio_mt"
test = false

[[bin]]
name = "sigint_cancel_tokio_mt"
test = false

[[bin]]
name = "spawn_blocking_tokio_mt"
test = false

[[bin]]
name = "spawn_tracked"
test = false

[[bin]]
name = "stdio_attribution_tokio_mt"
test = false

[[bin]]
name = "sync_mixed_tokio_mt"
test = false

[[bin]]
name = "teardown_always_runs_tokio_mt"
test = false

[[bin]]
name = "teardown_failure_tokio_mt"
test = false

[[bin]]
name = "teardown_invariants_tokio_mt"
test = false

[[bin]]
name = "test_setup_timeout_tokio_mt"
test = false

[[bin]]
name = "test_teardown_timeout_tokio_mt"
test = false

[[bin]]
name = "tracker_drain_tokio_mt"
test = false

[lints]
workspace = true
