[package]
name = "rudzio-macro"
version = "0.1.0"
edition = { workspace = true }
description = "Procedural macros for the rudzio async testing framework."
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }
