[package]
name = "rudzio-migrate"
version = "0.1.0"
edition = { workspace = true }
publish = false
description = "Best-effort converter of stock cargo-style Rust tests into rudzio tests. Runs on a clean git tree, rewrites sources in place, keeps backups and pre-migration copies as block comments, and asks before wiring a shared runner."
readme = "README.md"
autotests = false

[lib]
name = "rudzio_migrate"
path = "src/lib.rs"
test = false
doctest = false

[[bin]]
name = "rudzio-migrate"
path = "src/main.rs"
test = false

[dependencies]
anyhow = { workspace = true }
cargo_metadata = { workspace = true }
ignore = { workspace = true }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true, features = ["span-locations"] }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits", "visit", "visit-mut"] }
thiserror = { workspace = true }
toml_edit = { workspace = true }
rudzio = { path = "..", features = ["common", "runtime-tokio-multi-thread"] }

[dev-dependencies]
tempfile = "=3.27.0"

[lints]
workspace = true

[[test]]
name = "main"
path = "tests/main.rs"
harness = false

# The golden-test harness relies on CARGO_MANIFEST_DIR pointing at
# migrate/ to locate its fixture trees. When the aggregator
# `#[path]`-includes the file, CARGO_MANIFEST_DIR becomes the
# aggregator's dir and the fixtures can't be found — runtime panics.
# Keep the golden tests on the per-crate `cargo test -p rudzio-migrate`
# path and skip them in `cargo rudzio test`.
[package.metadata.rudzio]
exclude = ["tests/golden.rs"]
