[package]
name = "rudzio-migrate"
version = "0.1.0"
edition = { workspace = true }
description = "Best-effort converter of stock cargo-style Rust tests into rudzio tests. Runs on a clean git tree, rewrites sources in place, keeps backups and pre-migration copies as block comments, and asks before wiring a shared runner."
license = "MIT OR Apache-2.0"
repository = "https://github.com/mykytanikitenko/rudzio"
readme = "README.md"
keywords = ["testing", "async", "migration", "cargo-test", "rudzio"]
categories = ["development-tools::testing", "command-line-utilities"]
autotests = false
exclude = ["fixtures/"]

[lib]
name = "rudzio_migrate"
path = "src/lib.rs"
test = false
doctest = false

[[bin]]
name = "rudzio-migrate"
path = "src/main.rs"
test = false

[dependencies]
anyhow = { workspace = true }
cargo_metadata = { workspace = true }
ignore = { workspace = true }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true, features = ["span-locations"] }
quote = { workspace = true }
syn = { workspace = true, features = [
  "full",
  "extra-traits",
  "visit",
  "visit-mut",
] }
thiserror = { workspace = true }
toml_edit = { workspace = true }
rudzio = { workspace = true, features = [
  "common",
  "runtime-tokio-multi-thread",
  "runtime-tokio-current-thread",
  "runtime-tokio-local",
  "runtime-compio",
  "runtime-embassy",
  "runtime-futures",
] }

[dev-dependencies]
tempfile = "=3.27.0"

[lints]
workspace = true

[[test]]
name = "main"
path = "tests/main.rs"
harness = false
