[package]
name = "rudzio-test-runner"
version = "0.1.0"
edition = { workspace = true }
publish = false
description = "Workspace-wide test runner: one #[rudzio::main] binary that aggregates `linkme`-collected tokens from rudzio's own dogfood suite, macro-internals' parser tests, and rudzio-fixtures's integration tests (via `#[path]` + `rudzio::build::expose_bins` so `env!(CARGO_BIN_EXE_...)` resolves)."

[dependencies]
anyhow = { workspace = true }
libc = { workspace = true }
rudzio = { workspace = true, features = ["common", "runtime-tokio-multi-thread", "runtime-tokio-current-thread", "runtime-tokio-local", "runtime-compio", "runtime-embassy", "runtime-futures"] }
# Needed so the `#[path]`-included macro-internals test files can
# `use rudzio_macro_internals::*`.
rudzio-macro-internals = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }
tokio = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true }

[build-dependencies]
# Emits `cargo:rustc-env=CARGO_BIN_EXE_<name>=<path>` for every bin
# declared by rudzio-fixtures, so the pulled-in `integration.rs` file's
# `env!(CARGO_BIN_EXE_...)` calls resolve at compile time. Declared
# inline (not `workspace = true`) so `default-features = false` can
# override the workspace root's dep spec.
rudzio = { version = "0.1.0", path = "..", default-features = false, features = ["build"] }

[lints]
workspace = true
