[package]
name = "async_std_test"
version = "0.1.0"
edition = "2024"
autotests = false

[dependencies]

[dev-dependencies]
async-std = { version = "1", features = ["attributes"] }
rudzio = { version = "0.1", features = ["common", "runtime-tokio-multi-thread"] }
anyhow = "1.0"

[lib]
harness = false
test = false
