[package]
name = "cfg_lints_preserve_existing"
version = "0.1.0"
edition = "2024"
autotests = false

[dependencies]

[lints.rust]
unsafe_code = "deny"
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tokio_unstable)", "cfg(rudzio_test)"] }

[lib]
harness = false
test = false

[dev-dependencies]
rudzio = { version = "0.1", features = ["common", "runtime-tokio-multi-thread"] }
anyhow = "1.0"
