[package]
name = "compio_test"
version = "0.1.0"
edition = "2024"
autotests = false

[dependencies]

[dev-dependencies]
compio = "0.15"
rudzio = { version = "0.1", features = ["common", "runtime-compio"] }
anyhow = "1.0"

[lib]
harness = false
test = false

[target."cfg(rudzio_test)".dependencies]
compio = "0.15"
rudzio = { version = "0.1", features = ["common", "runtime-compio"] }
anyhow = "1.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(rudzio_test)"] }
