[package]
name = "crate_with_bins"
version = "0.1.0"
edition = "2024"
autotests = false

[dependencies]

[lib]
harness = false
test = false

[[bin]]
name = "alpha"
test = false

[[bin]]
name = "beta"
test = false

[dev-dependencies]
rudzio = { version = "0.1", features = ["common", "runtime-tokio-multi-thread"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(rudzio_test)"] }
