[package]
name = "existing_test_harness_flip"
version = "0.1.0"
edition = "2024"

[dependencies]

# Pre-existing custom [[test]] entry with harness = true (the
# default). Post-migration the tool should flip harness = false on
# THIS entry in place rather than appending a duplicate.
[[test]]
name = "integration"
path = "tests/integration.rs"
harness = false

[lib]
test = false

[dev-dependencies]
rudzio = { version = "0.1", features = ["common", "runtime-tokio-multi-thread"] }
anyhow = "1.0"
