[package]
name = "integration_file"
version = "0.1.0"
edition = "2024"

[dependencies]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
rudzio = { version = "0.1", features = ["common", "runtime-tokio-multi-thread"] }
anyhow = "1.0"

[lib]
test = false

[[test]]
name = "api"
path = "tests/api.rs"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(rudzio_test)"] }
