[package]
name = "result_returning_block_body"
version = "0.1.0"
edition = "2024"
autotests = false

[dependencies]

[lib]
harness = false
test = false

[dev-dependencies]
rudzio = { version = "0.1", features = ["common", "runtime-tokio-multi-thread"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(rudzio_test)"] }
