[package]
name = "rstest_skipped"
version = "0.1.0"
edition = "2024"
autotests = false

[dependencies]

[dev-dependencies]
rstest = "0.22"
rudzio = { version = "0.1", features = ["common", "runtime-tokio-multi-thread"] }

[lib]
harness = false
test = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(rudzio_test)"] }
