[package]
name = "test_context_migration"
version = "0.1.0"
edition = "2024"
autotests = false

[dependencies]
test-context = "0.3"

[lib]
harness = false
test = false

[dev-dependencies]
rudzio = { version = "0.1", features = ["common", "runtime-tokio-multi-thread"] }
anyhow = "1.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(rudzio_test)"] }
