[package]
name = "tests_only_flag"
version = "0.1.0"
edition = "2024"

[dependencies]

[lib]
test = false

[dev-dependencies]
rudzio = { version = "0.1", features = ["common", "runtime-tokio-multi-thread"] }

[[test]]
name = "integration"
path = "tests/integration.rs"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(rudzio_test)"] }
